@@ -3,9 +3,22 @@ import Dependencies.*
 val scala3Version       = "3.3.0"
 val scala2Version       = "2.13.10"
 lazy val commonSettings = Seq(
-  organization := "io.rhonix",
-  version      := "0.1.0-SNAPSHOT",
-//  scalafmtOnCompile := !sys.env.contains("CI"), // Format on compile, disable in CI environments
+  organization      := "io.rhonix",
+  version           := "0.1.0-SNAPSHOT",
+  scalafmtOnCompile := !sys.env.contains("CI"), // Format on compile, disable in CI environments
+
+  // Java 17+ has more restrictive policy for access to JDK internals.
+  // Without the following java options liquibase library does not work properly
+  // and tests fail with "java.base does not "opens java.lang" to unnamed module @4b8f7a19"
+  // Please see https://dev.java/learn/modules/add-exports-opens/
+  // NOTE: this does not help with running tests in IntelliJ, so
+  // to run such tests in IntelliJ this argument has to be added explicitly.
+  javaOptions ++= Seq(
+    "--add-opens=java.base/java.lang=ALL-UNNAMED",
+  ),
+  Test / fork               := true,
+  Test / parallelExecution  := false,
+  Test / testForkedParallel := false,
 )
 
 lazy val settingsScala3 = commonSettings ++ Seq(
@@ -36,7 +49,7 @@ lazy val sdk = (project in file("sdk"))
 // Database interfaces implementation
 lazy val db = (project in file("db"))
   .settings(settingsScala2*)
-  .settings(libraryDependencies ++= Seq(catsCore, catsEffect) ++ dbLibs ++ tests)
+  .settings(libraryDependencies ++= Seq(catsCore, catsEffect) ++ dbLibs ++ tests ++ log)
   .dependsOn(sdk)
 
 // Consensus
